# zed-solidity

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  example.sol  extension.json  extension.toml  release.yml
.github/: release.yml
.zed/: tasks.json
code/: IERC20.sol  example.sol  example.test.sol  test.sol
grammars/: solidity.toml
languages/solidity/: config.toml  highlights.scm  indents.scm  injections.scm  outline.scm  runnables.scm
languages/yul/: config.toml  highlights.scm  indents.scm  outline.scm
src/: solidity.rs
