[package]
name = "zed_solidity"
version = "0.2.0"
edition = "2021"
authors = [
    "Daniel Zarifpour <z@rifpour.xyz> (Original Creator)",
    "Jacob Czepluch <j.czepluch@proton.me> (Current Maintainer)",
]
publish = false
license = "MIT"

[lib]
path = "src/solidity.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.6.0"
